# providence

./: CLAUDE.md  Cargo.toml  LICENSE  deny.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.md
adapters/config-loader/src/: authoring.rs  lib.rs
adapters/renderer/: Cargo.toml
adapters/renderer/src/: anim.rs  camera.rs  color.rs  context.rs  error.rs  gpu.rs  headless.rs  hud.rs  lib.rs  light.rs  math.rs  mesh.rs  pick.rs  water.rs  window.rs
config/: default.toml  sandbox.toml
crates/app/src/: lib.rs
crates/config/src/: lib.rs
crates/core/src/terrain/: field.rs  mod.rs  shape.rs
crates/core/tests/: replay.rs
crates/ports/src/: lib.rs
crates/ports/tests/: terrain_frame.rs
crates/providence/: Cargo.toml
crates/providence/src/: main.rs
crates/providence/tests/: e2e.rs
docs/: 10-game-design.md  20-architecture.md  30-ai-agent-contract.md  40-parameterisation.md  70-glossary.md
docs/contracts/: config.schema.json
docs/decisions/: 0007-wgpu-rendering-framework.md  0015-debug-hud-ui-layer.md  0016-exploration-lane-and-subsystem-isolation.md  0017-vertex-heightfield-terrain.md  0018-outcome-framed-decision-rationale.md  0019-foundation-first-terrain-workbench.md  0020-workbench-runtime-and-rendererport.md  0021-seeded-parameterised-worldgen.md  0023-derived-terrain-snapshot-per-vertex-type.md  README.md  template.md
xtask/src/: boundary.rs  coverage.rs  main.rs
