# Workspace realising the ports-and-adapters graph as a crate graph
# (docs/20-architecture.md §5, ADR 0006). The boundary checker (ADR 0009)
# enforces the allowed dependency edges; Cargo itself forbids cycles.
[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/config",
    "crates/ports",
    "crates/app",
    "crates/providence",
    "adapters/config-loader",
    "adapters/renderer",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

# All versions pinned at latest stable at time of adoption (I8); exact
# resolution recorded in Cargo.lock. Bumps arrive via Dependabot PRs gated
# by CI (ADR 0010).
[workspace.dependencies]
providence-core = { path = "crates/core" }
providence-config = { path = "crates/config" }
providence-ports = { path = "crates/ports" }
providence-app = { path = "crates/app" }
providence-config-loader = { path = "adapters/config-loader" }
providence-renderer = { path = "adapters/renderer" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
schemars = "1.2.1"
garde = { version = "0.23.0", default-features = false, features = ["derive"] }
syn = { version = "2.0.118", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
# GPU/windowing stack for the workbench renderer adapter (ADR 0007, ADR 0020).
# Confined to `providence-renderer` by the boundary checker; never reaches the
# core. Pinned exact (I8); bumps arrive via Dependabot PRs gated by CI.
wgpu = "=29.0.4"
winit = "=0.30.13"
bytemuck = { version = "=1.25.1", features = ["derive"] }
pollster = "=0.4.0"
png = "=0.18.1"
# egui debug/HUD overlay (ADR 0015, ADR 0020; issue #8 Phase 3). Compiled only
# under the renderer's `debug-hud` feature and confined there by the boundary
# checker. Pinned exact (I8); egui-wgpu 0.35 targets wgpu ^29 and winit ^0.30 —
# the same versions the renderer already pins, so a single wgpu stays in-tree.
# default-features off on egui-wgpu drops the wasm/webgl extras (native-only,
# ADR 0005); egui keeps `default_fonts` so the readout has a font to draw with.
egui = { version = "=0.35.0", default-features = false, features = ["default_fonts"] }
egui-wgpu = { version = "=0.35.0", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

# Curated pedantic set (ADR 0009): the pedantic group at `warn` (promoted to
# errors by the gate's `-D warnings`), minus documented low-signal exclusions.
# Tuning this list is a normal reviewed change, not an ADR.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow" # crate-prefixed names are project convention
must_use_candidate = "allow"      # too noisy on plain-data accessors
missing_errors_doc = "allow"      # error enums are self-documenting via Display
missing_panics_doc = "allow"      # gate code panics only on broken invariants
