[package]
name = "providence-renderer"
description = "Workbench renderer adapter: presents terrain via RendererPort with a wgpu/winit 3D view (issue #8, ADR 0020)"
version.workspace = true
edition.workspace = true
publish.workspace = true

# Adapters depend on port interfaces + config data types; never on other
# adapters and never on the core (docs/20-architecture.md §5 rule 3, ADR 0020).
# The GPU libraries (wgpu/winit/…) are confined to this one crate by the
# boundary checker; they never reach the deterministic core (I2/I3).
[dependencies]
providence-ports = { workspace = true }
providence-config = { workspace = true }
# Real-time 3D presentation (ADR 0007, ADR 0020 §2), pinned in the workspace:
# wgpu draws the surface, winit owns the window loop, bytemuck packs GPU
# buffers, pollster blocks on wgpu's async setup, png encodes headless captures.
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
png = { workspace = true }

[lints]
workspace = true
